@@ -1,21 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
+ * agreements. See the NOTICE file distributed with this work for additional information regarding
+ * copyright ownership. The ASF licenses this file to You under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance with the License. You may obtain a
+ * copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software distributed under the License
+ * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing permissions and limitations under
+ * the License.
  */
 package org.apache.tika.serialization;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import java.lang.reflect.Array;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -26,8 +25,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-
-import com.fasterxml.jackson.databind.JsonNode;
 
 /**
  * See the notes @link{TikaJsonSerializer}.
@@ -41,11 +38,10 @@ public class TikaJsonDeserializer {
             throw new IllegalArgumentException("root needs to be an object");
         }
         if (!root.has(TikaJsonSerializer.INSTANTIATED_CLASS_KEY)) {
-            throw new IllegalArgumentException("need to specify: " + TikaJsonSerializer.INSTANTIATED_CLASS_KEY);
+            throw new IllegalArgumentException(
+                            "need to specify: " + TikaJsonSerializer.INSTANTIATED_CLASS_KEY);
         }
-        String className = root
-                .get(TikaJsonSerializer.INSTANTIATED_CLASS_KEY)
-                .asText();
+        String className = root.get(TikaJsonSerializer.INSTANTIATED_CLASS_KEY).asText();
 
         try {
             return Optional.of(deserialize(Class.forName(className), root));
@@ -54,10 +50,9 @@ public class TikaJsonDeserializer {
         }
     }
 
-    public static <T> T deserialize(Class<? extends T> clazz, JsonNode root) throws ReflectiveOperationException {
-        T obj = clazz
-                .getDeclaredConstructor()
-                .newInstance();
+    public static <T> T deserialize(Class<? extends T> clazz, JsonNode root)
+                    throws ReflectiveOperationException {
+        T obj = clazz.getDeclaredConstructor().newInstance();
         Map<String, List<Method>> setters = getSetters(obj);
         if (!root.isObject()) {
             throw new IllegalArgumentException("must be object");
@@ -75,11 +70,10 @@ public class TikaJsonDeserializer {
 
     private static Map<String, List<Method>> getSetters(Object obj) {
         Map<String, List<Method>> setters = new HashMap<>();
-        for (Method m : obj
-                .getClass()
-                .getMethods()) {
+        for (Method m : obj.getClass().getMethods()) {
             String n = m.getName();
-            if (n.startsWith(TikaJsonSerializer.SET) && n.length() > 3 && Character.isUpperCase(n.charAt(3))) {
+            if (n.startsWith(TikaJsonSerializer.SET) && n.length() > 3
+                            && Character.isUpperCase(n.charAt(3))) {
                 if (m.getParameters().length == 1) {
                     String paramName = TikaJsonSerializer.getParam(TikaJsonSerializer.SET, n);
                     List<Method> methods = setters.get(paramName);
@@ -94,7 +88,8 @@ public class TikaJsonDeserializer {
         return setters;
     }
 
-    private static void setValue(String name, JsonNode node, Object obj, Map<String, List<Method>> setters) throws ReflectiveOperationException {
+    private static void setValue(String name, JsonNode node, Object obj,
+                    Map<String, List<Method>> setters) throws ReflectiveOperationException {
         List<Method> mySetters = setters.get(name);
         if (mySetters == null || mySetters.isEmpty()) {
             throw new IllegalArgumentException("can't find any setter for " + name);
@@ -115,7 +110,7 @@ public class TikaJsonDeserializer {
     }
 
     private static void setArray(String name, JsonNode node, Object obj, List<Method> mySetters) {
-        //there's much more to be done here. :(
+        // there's much more to be done here. :(
         for (Method setter : mySetters) {
             try {
                 tryArray(name, node, obj, setter);
@@ -125,7 +120,8 @@ public class TikaJsonDeserializer {
         }
     }
 
-    private static void tryArray(String name, JsonNode node, Object obj, Method setter) throws InvocationTargetException, IllegalAccessException {
+    private static void tryArray(String name, JsonNode node, Object obj, Method setter)
+                    throws InvocationTargetException, IllegalAccessException {
         Class argClass = setter.getParameterTypes()[0];
         Class componentType = argClass.getComponentType();
         if (argClass.isArray()) {
@@ -143,7 +139,8 @@ public class TikaJsonDeserializer {
                 elementType = ((ParameterizedType) listType).getActualTypeArguments()[0];
             }
             if (elementType == null) {
-                throw new IllegalArgumentException("Can't infer parameterized type for list in: " + node);
+                throw new IllegalArgumentException(
+                                "Can't infer parameterized type for list in: " + node);
             }
             int len = node.size();
             List<Object> list = new ArrayList<>();
@@ -172,11 +169,11 @@ public class TikaJsonDeserializer {
                     return optional.get();
                 }
             } else {
-                throw new IllegalArgumentException("I see a json object, but I don't see " +
-                        TikaJsonSerializer.INSTANTIATED_CLASS_KEY + ": " + node);
+                throw new IllegalArgumentException("I see a json object, but I don't see "
+                                + TikaJsonSerializer.INSTANTIATED_CLASS_KEY + ": " + node);
             }
         }
-        //add short, boolean
+        // add short, boolean
         throw new IllegalArgumentException("I regret I don't yet support: " + clazz);
     }
 
@@ -188,19 +185,17 @@ public class TikaJsonDeserializer {
 
         Optional object = deserializeObject(node);
         if (object.isEmpty()) {
-            //log, throw exception?!
+            // log, throw exception?!
             return;
         }
         for (Method m : mySetters) {
             Class argClass = m.getParameters()[0].getType();
-            if (argClass.isAssignableFrom(object
-                    .get()
-                    .getClass())) {
+            if (argClass.isAssignableFrom(object.get().getClass())) {
                 try {
                     m.invoke(obj, object.get());
                     return;
                 } catch (IllegalAccessException | InvocationTargetException e) {
-                    //swallow
+                    // swallow
                 }
             }
         }
@@ -208,26 +203,25 @@ public class TikaJsonDeserializer {
     }
 
     private static void setMap(String name, JsonNode node, Object obj, List<Method> setters) {
-        //TODO this should try to match the map setters with the data types
-        //for now, we're just doing <String,String>
+        // TODO this should try to match the map setters with the data types
+        // for now, we're just doing <String,String>
         Map<String, String> val = new HashMap<>();
         for (Map.Entry<String, JsonNode> e : node.properties()) {
-            val.put(e.getKey(), e
-                    .getValue()
-                    .textValue());
+            val.put(e.getKey(), e.getValue().textValue());
         }
         for (Method m : setters) {
             try {
                 m.invoke(obj, val);
                 return;
             } catch (ReflectiveOperationException e) {
-                //swallow
+                // swallow
             }
         }
         throw new IllegalArgumentException("can't find map setter for: " + name);
     }
 
-    private static void setBoolean(String name, JsonNode node, Object obj, List<Method> setters) throws ReflectiveOperationException {
+    private static void setBoolean(String name, JsonNode node, Object obj, List<Method> setters)
+                    throws ReflectiveOperationException {
         for (Method m : setters) {
             Class argClass = m.getParameters()[0].getType();
             if (argClass.equals(Boolean.class) || argClass.equals(boolean.class)) {
@@ -235,7 +229,7 @@ public class TikaJsonDeserializer {
                 return;
             }
         }
-        //TODO -- maybe check for string?
+        // TODO -- maybe check for string?
         throw new IllegalArgumentException("can't set boolean on " + name);
     }
 
@@ -249,16 +243,17 @@ public class TikaJsonDeserializer {
                     return;
                 } catch (Exception e) {
                     e.printStackTrace();
-                    //swallow
+                    // swallow
                 }
             }
         }
         throw new IllegalArgumentException("can't set null on " + name);
     }
 
-    private static void setStringValue(String name, String txt, Object obj, List<Method> setters) throws ReflectiveOperationException {
+    private static void setStringValue(String name, String txt, Object obj, List<Method> setters)
+                    throws ReflectiveOperationException {
 
-        //try for exact match first
+        // try for exact match first
         for (Method m : setters) {
             Class argClass = m.getParameters()[0].getType();
             if (argClass.equals(String.class)) {
@@ -295,7 +290,7 @@ public class TikaJsonDeserializer {
                 shortMethod.invoke(obj, val);
                 return;
             } catch (NumberFormatException e) {
-                //swallow
+                // swallow
             }
         } else if (intMethod != null) {
             try {
@@ -303,7 +298,7 @@ public class TikaJsonDeserializer {
                 intMethod.invoke(obj, val);
                 return;
             } catch (NumberFormatException e) {
-                //swallow
+                // swallow
             }
         } else if (floatMethod != null) {
             try {
@@ -311,7 +306,7 @@ public class TikaJsonDeserializer {
                 floatMethod.invoke(obj, val);
                 return;
             } catch (NumberFormatException e) {
-                //swallow
+                // swallow
             }
         } else if (longMethod != null) {
             try {
@@ -319,7 +314,7 @@ public class TikaJsonDeserializer {
                 longMethod.invoke(obj, val);
                 return;
             } catch (NumberFormatException e) {
-                //swallow
+                // swallow
             }
         } else if (doubleMethod != null) {
             try {
@@ -327,7 +322,7 @@ public class TikaJsonDeserializer {
                 doubleMethod.invoke(obj, val);
                 return;
             } catch (NumberFormatException e) {
-                //swallow
+                // swallow
             }
         } else if (boolMethod != null) {
             if (txt.equalsIgnoreCase("true")) {
@@ -340,66 +335,74 @@ public class TikaJsonDeserializer {
 
     }
 
-    private static void setNumericValue(String name, JsonNode node, Object obj, List<Method> setters) throws ReflectiveOperationException {
+    private static void setNumericValue(String name, JsonNode node, Object obj,
+                    List<Method> setters) throws ReflectiveOperationException {
 
-        //try numeric and equals first
+        // try numeric and equals first
         for (Method m : setters) {
             Class argClass = m.getParameters()[0].getType();
             if ((argClass.equals(int.class) || argClass.equals(Integer.class)) && node.isInt()) {
                 m.invoke(obj, node.intValue());
                 return;
-            } else if ((argClass.equals(long.class) || argClass.equals(Long.class)) && node.isLong()) {
+            } else if ((argClass.equals(long.class) || argClass.equals(Long.class))
+                            && node.isLong()) {
                 m.invoke(obj, node.asLong());
                 return;
-            } else if ((argClass.equals(float.class) || argClass.equals(Float.class)) && node.isFloat()) {
+            } else if ((argClass.equals(float.class) || argClass.equals(Float.class))
+                            && node.isFloat()) {
                 m.invoke(obj, node.floatValue());
                 return;
-            } else if ((argClass.equals(double.class) || argClass.equals(Double.class)) && node.isDouble()) {
+            } else if ((argClass.equals(double.class) || argClass.equals(Double.class))
+                            && node.isDouble()) {
                 m.invoke(obj, node.doubleValue());
                 return;
-            } else if ((argClass.equals(short.class) || argClass.equals(Short.class)) && node.isShort()) {
+            } else if ((argClass.equals(short.class) || argClass.equals(Short.class))
+                            && node.isShort()) {
                 m.invoke(obj, node.shortValue());
                 return;
             }
         }
-        //try for higher precision setters
+        // try for higher precision setters
         for (Method m : setters) {
             Class argClass = m.getParameters()[0].getType();
             if ((argClass.equals(long.class) || argClass.equals(Long.class)) && node.isInt()) {
                 m.invoke(obj, node.asLong());
                 return;
-            } else if ((argClass.equals(double.class) || argClass.equals(Double.class)) && node.isFloat()) {
+            } else if ((argClass.equals(double.class) || argClass.equals(Double.class))
+                            && node.isFloat()) {
                 m.invoke(obj, node.floatValue());
                 return;
             }
         }
-        //try for lower precision setters
-        //we have to do this for node=double, type=float; should we do this for long->integer?!
+        // try for lower precision setters
+        // we have to do this for node=double, type=float; should we do this for long->integer?!
         for (Method m : setters) {
             Class argClass = m.getParameters()[0].getType();
             if ((argClass.equals(int.class) || argClass.equals(Integer.class)) && node.isLong()) {
                 long val = node.longValue();
                 if (val >= Integer.MAX_VALUE || val <= Integer.MIN_VALUE) {
-                    //don't do this
+                    // don't do this
                 } else {
                     m.invoke(obj, node.intValue());
                 }
                 return;
-            } else if ((argClass.equals(float.class) || argClass.equals(Float.class)) && node.isDouble()) {
-                //TODO -- check for over/underflow
+            } else if ((argClass.equals(float.class) || argClass.equals(Float.class))
+                            && node.isDouble()) {
+                // TODO -- check for over/underflow
                 m.invoke(obj, node.floatValue());
                 return;
-            } else if ((argClass.equals(short.class) || argClass.equals(Short.class)) && node.isInt()) {
+            } else if ((argClass.equals(short.class) || argClass.equals(Short.class))
+                            && node.isInt()) {
                 int val = node.intValue();
                 if (val > Short.MAX_VALUE || val < Short.MIN_VALUE) {
-                    //don't do this
+                    // don't do this
                 } else {
                     m.invoke(obj, node.shortValue());
                     return;
                 }
             }
         }
-        //finally try for String
+        // finally try for String
         for (Method m : setters) {
             Class argClass = m.getParameters()[0].getType();
             if (argClass.equals(String.class)) {
